--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
    "license": "MIT",
    "scripts": {
       "dev": "ts-node-dev --poll --transpile-only --ignore-watch node_modules --respawn src/shared/http/server.ts",
-      "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-      "start": "ts-node src/index.ts"
+      "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
+      
    },
    "dependencies": {
       "@types/express": "^4.17.13",
       "express": "^4.17.1",
+      "mysql": "^2.14.1",
+      "pg": "^8.7.1",
+      "reflect-metadata": "^0.1.10",
       "ts-node-dev": "^1.1.8",
       "tsc": "^2.0.3",
       "tsc-init": "^2.1.0",
       "typeorm": "0.2.38",
-      "typescript": "^4.4.3",
-      "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "typescript": "^4.4.3"
    },
    "devDependencies": {
       "ts-node": "3.3.0",
