--- a/package.json
+++ b/package.json
@@ -5,24 +5,33 @@
    "license": "MIT",
    "scripts": {
       "dev": "ts-node-dev --poll --transpile-only --ignore-watch node_modules --respawn src/shared/http/server.ts",
-      "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
-      
+      "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
+      "test": "jest"
    },
    "dependencies": {
+      "@types/bcryptjs": "^2.4.2",
       "@types/express": "^4.17.13",
+      "@types/jest": "^27.0.2",
+      "@types/uuid": "^8.3.1",
+      "bcryptjs": "^2.4.3",
       "express": "^4.17.1",
+      "express-async-errors": "^3.1.1",
+      "jest": "^27.2.4",
       "mysql": "^2.14.1",
       "pg": "^8.7.1",
       "reflect-metadata": "^0.1.10",
+      "ts-jest": "^27.0.5",
       "ts-node-dev": "^1.1.8",
       "tsc": "^2.0.3",
       "tsc-init": "^2.1.0",
+      "tsyringe": "^4.6.0",
       "typeorm": "0.2.38",
-      "typescript": "^4.4.3"
+      "typescript": "^4.4.3",
+      "uuid": "^8.3.2"
    },
    "devDependencies": {
-      "ts-node": "3.3.0",
+      "@babel/preset-typescript": "^7.15.0",
       "@types/node": "^8.0.29",
-      "typescript": "3.3.3333"
+      "ts-node": "^10.2.1"
    }
 }
