--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "@types/jest": "^27.0.2",
       "@types/uuid": "^8.3.1",
       "bcryptjs": "^2.4.3",
+      "cors": "^2.8.5",
       "express": "^4.17.1",
       "express-async-errors": "^3.1.1",
       "jest": "^27.2.4",
